# Corewar

./: -.pl  -.txt  .gitignore  1  2  3  Anchor.cor  Anchor.s  CMakeLists.txt  Gagnant.cor  Leka  Makefile  README.md  asm  corewar  diff  gitignore  my_d  std_d  tester.sh  tester2.sh  tester3.sh  tester4.sh  tester5.sh  tester6.sh
ASM/: CMakeLists.txt  Makefile  a.out  asm.h  asm_library.c  asm_library_pt1.c  asm_library_pt2.c  check_arg.c  check_error.c  count_params.c  count_size.c  error_and_free.c  exampel  free_params.c  g.c  init.c  init_struct.c  live.c  main.c  read.c  read_file.c  test  test.c  test.cor  test.txt  validate_arg.c  validate_label.c  validate_name.c  writing.c  writing_to_file.c  zork.cor
ASM/champs/: 42.cor  42.s  bee_gees.cor  bee_gees.s  ex.cor  ex.s
ASM/error/: mortel.cor
ASM/libft/: ft_strlen.c  libft.h
ASM_SRC/: Makefile
ASM_SRC/inc/: asm.h
ASM_SRC/src/: main.c
VIZU/: a.out  v_main.c
VM/: Makefile  arg_handler.c  arg_identify.c  codage_identify.c  comm_add.c  comm_aff.c  comm_and.c  comm_fork.c  comm_ld.c  comm_ldi.c  comm_lfork.c  comm_live.c  comm_lld.c  comm_lldi.c  comm_next.c  comm_or.c  comm_st.c  comm_sti.c  comm_sub.c  comm_xor.c  comm_zjmp.c  get_data.c  init_comm_f1.c  init_comm_f2.c  init_comm_f3.c  init_comm_f4.c  load_data_to_reg.c  load_from_reg.c  main.c  set_proc_pos.c  to_map.c  vm.h
VM/inc/: vizu.h  vm.h
VM/src/: arg_handler.c  codage_identify.c  comm_add.c  comm_aff.c  comm_and.c  comm_and_or_xor.c  comm_fork.c  comm_ld.c  comm_ldi.c  comm_lfork.c  comm_live.c  comm_lld.c  comm_lldi.c  comm_next.c  comm_or.c  comm_st.c  comm_sti.c  comm_sub.c  comm_xor.c  comm_zjmp.c  flag_validation.c  ft_error.c  game.c  game_init.c  get_data.c  init_comm_f.c  live_cheker.c  load_from_reg.c  main.c  manage_files.c  manage_flags.c  manage_flags2.c  set_proc_pos.c  to_map.c  usadge.c  v_main.c  v_map_handler.c  v_map_handler3.c  v_map_handler4.c  validate_players.c  (+1 more)
asm_src/: Makefile
asm_src/inc/: asm.h
asm_src/src/: check_arg.c  error_and_free.c  main.c  validate_arg.c  validate_label.c  validate_name.c
default_res/: op.c
default_res/vm_champs_std/: 1  test.cor
default_res/vm_champs_std/champs/: Gagnant.cor  Gagnant.s
libft/: Makefile  ft_genchar.c  ft_reverse_bits.c  libft.h
libft/ft_printf/: Makefile
libft/ft_printf/inc/: ft_printf.h
libft/libft/: Makefile
libft/libft/inc/: libft.h
libft/printf/: ft_format.c  ft_format_length_1.c  ft_freesh.c  ft_intdnegmin_1.c  ft_intdnegnomin_1.c  ft_intdposmin_1.c  ft_intdposnomin_1.c  ft_intoposmin_1.c  ft_intoposnomin_1.c  ft_intxposmin_1.c  ft_intxposnomin_1.c  ft_length.c  ft_length_1.c  ft_length_o.c  ft_length_o_1.c  ft_length_u.c  ft_length_u_1.c  ft_outp.c  ft_pitoa.c  ft_ppupad.c  ft_ppupadnomin_11.c  ft_pput_wchar.c  ft_pput_wchar_str.c  ft_pputchar.c  ft_pputcharik.c  ft_pputdnbr.c  ft_pputproc.c  ft_pputstr.c  ft_pputstrik.c  ft_printf.c  ft_put_wcharstr.c  ft_putchar.c  ft_putdnolen.c  ft_putonolen.c  ft_putxnolen.c  ft_specif.c
test_fol/: 2  3  Pcorewar  Zhucorewar  corewarYev
test_fol/test_maps/: 42.cor  Anchor.cor  Anchor.s  GagnantT.cor  live.cor  live.s  live1.cor  live1.s  live2.cor  live2.s  live3.cor  live3.s  live4.cor  live4.s  test_bot.cor  test_bot.s  ultima.s  zorkT.cor
vm/src/: arg_hendler2.c
