cmake_minimum_required(VERSION 3.9)
project(corewar)

set(CMAKE_CXX_STANDARD 11)

add_executable(corewar
        ASM/main.c
        default_res/op.c
        default_res/op.h
        libft/printf/ft_format.c
        libft/printf/ft_format_length_1.c
        libft/printf/ft_freesh.c
        libft/printf/ft_intdnegmin_1.c
        libft/printf/ft_intdnegnomin_1.c
        libft/printf/ft_intdposmin_1.c
        libft/printf/ft_intdposnomin_1.c
        libft/printf/ft_intoposmin_1.c
        libft/printf/ft_intoposnomin_1.c
        libft/printf/ft_intxposmin_1.c
        libft/printf/ft_intxposnomin_1.c
        libft/printf/ft_length.c
        libft/printf/ft_length_1.c
        libft/printf/ft_length_o.c
        libft/printf/ft_length_o_1.c
        libft/printf/ft_length_u.c
        libft/printf/ft_length_u_1.c
        libft/printf/ft_outp.c
        libft/printf/ft_pitoa.c
        libft/printf/ft_ppupad.c
        libft/printf/ft_ppupadnomin_11.c
        libft/printf/ft_pput_wchar.c
        libft/printf/ft_pput_wchar_str.c
        libft/printf/ft_pputchar.c
        libft/printf/ft_pputcharik.c
        libft/printf/ft_pputdnbr.c
        libft/printf/ft_pputproc.c
        libft/printf/ft_pputstr.c
        libft/printf/ft_pputstrik.c
        libft/printf/ft_printf.c
        libft/printf/ft_put_wcharstr.c
        libft/printf/ft_putchar.c
        libft/printf/ft_putdnolen.c
        libft/printf/ft_putonolen.c
        libft/printf/ft_putxnolen.c
        libft/printf/ft_specif.c
        libft/printf/ft_wchar_len.c
        libft/ft_arr_len.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_count_words.c
        libft/ft_dig_count.c
        libft/ft_genchar.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_llutoa_base.c
        libft/ft_lstadd.c
        libft/ft_lstadd_back.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_reverse_bits.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_free_12.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtoupper.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/libft.h
        VIZU/v_main.c
        VM/main.c
        VM/to_map.c
        VM/vm.h)
